# llm-benchpacks

./: .gitignore  AGENTS.md  README.md  llms.txt  pyproject.toml
benchpacks/desktop-django-wrap/: README.md  benchpack.toml
benchpacks/desktop-django-wrap/fixtures/: synthetic-django-app.md
benchpacks/desktop-django-wrap/prompts/: wrap-plan-context.md  wrap-plan-small.md
benchpacks/patch-from-failure/: README.md  benchpack.toml
benchpacks/patch-from-failure/prompts/: fix-greeting.md
benchpacks/runtime-sweep/: README.md  benchpack.toml
benchpacks/smoke-chat/: README.md  benchpack.toml
docs/: apple-silicon-m4-m5-runbook.md  architecture.md  benchpack-format.md  decisions.md  hardware-targets.md  implementation-plan.md  run-log.md  spec-log.md  specification.md
results/2026-04-28-mlx-lm-runtime/: run.jsonl  summary.md
results/2026-04-28-mlx-lm-smoke/: run.jsonl  summary.md
results/2026-04-29-llama-server-runtime/: run.jsonl  summary.md
results/2026-04-29-llama-server-smoke/: hardware.json  run.jsonl  summary.md
results/2026-04-30-llama-server-desktop-django-wrap/: run.jsonl  summary.md
src/benchpack/: __init__.py  cli.py  compare.py  hardware.py  packs.py  patches.py  report.py  results.py  run_metadata.py  scoring.py  tasks.py  verifiers.py  workspaces.py
src/benchpack/adapters/: __init__.py  (+2 more)
tests/: test_cli.py  test_compare.py  test_hardware.py  test_ollama_generate.py  test_openai_chat.py  test_packs.py  test_patches.py  test_report.py  test_results.py  test_run_metadata.py  test_scoring.py  test_tasks.py  test_verifiers.py  test_workspaces.py
(+13 files in other folders)
