[project]
name = "benchpack"
version = "0.1.0"
description = "Portable benchmark packs for local LLM runtimes"
authors = [
    { name = "Jochen Wersdörfer", email = "jochen@wersdoerfer.de" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
benchpack = "benchpack.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
